codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_goal_active_token_budget_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  GPT-5.4                                            正在执行目标（40K / 50K）  " Hidden by multi-width symbols: [(54, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " "), (77, " ")]
