codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_goal_complete_elapsed_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  GPT-5.4                                             目标已完成（2d 23h 42m）  " Hidden by multi-width symbols: [(55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (77, " ")]
