codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_model_with_reasoning_plan_mode_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.2 medium                                  计划模式 (按 shift+tab 切换)  " Hidden by multi-width symbols: [(51, " "), (53, " "), (55, " "), (57, " "), (61, " "), (74, " "), (76, " ")]
